{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "2c249a97-91b3-44e3-9dc2-4165d42c75e0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9c511728-6be5-43ea-851c-773090ea02c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "993ed388-b89d-4a1e-917a-a0f775f76f87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "14f059f4-45d7-4eb5-b9f2-80c5e94539ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y_Attack",
                    "type": "Button",
                    "id": "e38974b3-e228-429e-98a3-7546f551f8da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "MoveKeyBoard",
                    "id": "f8d725a4-26f2-453a-9a70-a992906fed71",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b699bf35-edcc-4c23-9da4-588c14e774b4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e6c82587-1ed2-4494-8b13-0718c3fbf3ca",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4f8795b9-bc0b-4b3f-8336-f7dde734f296",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8ee7e650-2ead-489b-9ccf-d9f3718a0aa1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MoveGamePad",
                    "id": "a1dee9f9-df68-4b27-a722-5b55137411c7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ea337fc-b6c6-4bad-8e17-7fe3b03f8536",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cfd2398f-f605-4936-8698-728c41518ab2",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b3a7e3bb-091d-4474-aba3-43c24abf9137",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b8455b81-f443-4b1e-8950-316ca88c1b29",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c25d048b-da2a-42dd-8301-fe7151796105",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0567f89-fa8a-4027-82b8-2b762ca19474",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8d09b90-e71d-407f-abee-58a44d9fb2ac",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b85f30f1-36f1-4aae-accb-295964e12eb9",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fe3a1f4-046a-4b58-a5d6-36717efdedfc",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Y_Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c22bd17-0b25-46c3-aea8-6266e72e600a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Y_Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DialogueControl",
            "id": "54c53a99-614d-48f4-8d2c-ba21839cbe0f",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "04e05c7a-747b-4336-9ce6-c465e33bc6d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a488df5-8883-450c-a50f-57a3862563d7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": []
        },
        {
            "name": "KeyBoard",
            "bindingGroup": "KeyBoard",
            "devices": []
        }
    ]
}